--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://unsplash.com/photos/ZA9PHAnVP5g");
+  background-image: url("https://thumbs.dreamstime.com/b/valentine-fork-knife-spoon-silverware-red-ribbon-heart-s-silverware-tied-up-red-ribbon-heart-shape-isolated-white-108671229.jpg");
   background-size: cover;
 }
 #navbar {
